# rrdate

./: .gitignore  Cargo.toml  README.md
src/: main.rs  ntp.rs  rfc868.rs
