[package]
name = "rrdate"
version = "0.1.0"
authors = ["Guy Rutenberg <guyrutenberg@gmail.com>"]
edition = "2018"

[[bin]]
name = "rdate"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1.0.62", features = ["backtrace"]}
byteorder = "1.2"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = "1.4.0"
libc = "0.2.125"
rand = "0.8.5"
